[package]
name = "btb-finance-clmm"
version = "0.1.0"
description = "BTB.finance Raydium CLMM Integration"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "~1.17.0"
raydium-clmm-sdk = { git = "https://github.com/raydium-io/raydium-clmm" }
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
num-traits = "0.2"
thiserror = "1.0"
uint = { version = "0.9", default-features = false }

[dev-dependencies]
proptest = "1.2"
rand = "0.8"
