[package]
name = "btbdefipool"
version = "0.1.0"
description = "Solana Token Vesting Program with DevAI support"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "btbdefipool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
 

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.16"
devai = "0.1.0"  # Replace with the actual version of the DevAI crate